data/derived/fa15/progs/unify/prog0258.ml.out
Characters 867-888:
  | 6 -> if (depth = 0) then (if (rand(0,2) = 0) then buildX() else buildY()) else buildFunny(build(rand,depth-1)) 
                                                                                             ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         expr * expr * expr
